[package]
name = "dp-3t-client"
version = "0.1.0"
authors = ["Frank Andrew Stevenson <frank.stevenson@magseis.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
ring = "0.16.12"
aes = "0.3.2"
hex = "0.4.2"